yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend

---

apiVersion: v1
kind: Namespace
metadata:
  name: backend
