yaml/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vintageblue-tc-deployment
  namespace: backend
  labels:
    app: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: vintageblue-tc
        image: 593276723488.dkr.ecr.ap-northeast-2.amazonaws.com/tc-vintagepub:aa
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
