yaml/frontend-deploy.yaml
# NGINX

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vintageblue-ng-deployment
  namespace: frontend
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: 593276723488.dkr.ecr.ap-northeast-2.amazonaws.com/tc-vintagepub:aa
        name: vintageblue-ng
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
