yaml/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: nginx-svc
  namespace: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30100
  selector:
    app: web
  type: NodePort
status:
  loadBalancer: {}
