yaml/tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: was
  name: tomcat-svc
  namespace: backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  clusterIP: 172.20.100.121
  selector:
    app: was
status:
  loadBalancer: {}
